--- a/css/include/components/dark-mode-adjustments.css
+++ b/css/include/components/dark-mode-adjustments.css
@@ -52,6 +52,16 @@ figure img[src$=".svg"] {
 	background-color: var(--GW-transparent-svg-background-color);
 }
 
+/*	Audio elements don’t change color in dark mode, so their hover styles need
+	adjusted.
+ */
+figure audio:hover {
+    border-color: var(--GW-figure-outline-color);
+    box-shadow:
+        0 0 4px 0 currentColor inset,
+        0 0 4px 0 currentColor;
+}
+
 /*	Create a ‘footer’ at the bottom of pages which looks like ‘—————𝔊—————’,
 	similar to the arabesque navbar.
 
