Fix layout bug in TOCs

--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -1107,6 +1107,7 @@ div.TOC ul > li::before {
     right: calc(100% - 1em);
     left: unset;
     width: 111px;
+    padding: 0;
     text-align: right;
     font-weight: normal;
     pointer-events: none;
