Fix some image layout bugs

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -1333,6 +1333,13 @@ figure svg {
     overflow: hidden;
 }
 
+/*	Reduce reflow.
+ */
+img.float-right,
+img.float-left {
+	max-width: calc(50% - 1.5em);
+}
+
 
 /********/
 /* MISC */
