--- a/css/default.css
+++ b/css/default.css
@@ -4005,7 +4005,7 @@ body.index-directory #footer {
 .popframe-body h1.display-pop-not {
     display: none;
 }
-.popframe-body section.display-pop-not {
+.popframe-body section.display-pop-not:not(:first-child) {
     margin-top: 2.75em;
 }
 
