Slight tweak to collapse layout edge case

--- a/css/default.css
+++ b/css/default.css
@@ -551,10 +551,10 @@ blockquote .collapse.has-abstract.expanded-not > .disclosure-button .part::befor
 /*  Collapse edge cases.
  */
 
-li > .collapse {
+li > .collapse:only-child {
     margin: 0.25em 0 0.25em 0;
 }
-li:last-child > .collapse {
+li:last-child > .collapse:only-child {
 	margin: 0.25em 0 0.75em 0;
 }
 li > .collapse > .collapse-content-wrapper > ul {
