--- a/css/default.css
+++ b/css/default.css
@@ -4081,6 +4081,7 @@ body.index-directory #footer {
 
     /*  Styling. */
     --popups-popup-box-shadow: 1px 2px 8px 0 var(--GW-popups-box-shadow-color);
+	--popups-popup-title-bar-background-image: url('/static/img/popup-title-bar-pattern.gif');
 
     border: var(--GW-popups-popup-border-width) double var(--GW-popups-popup-border-color);
     box-shadow: var(--popups-popup-box-shadow);
@@ -4091,8 +4092,17 @@ body.index-directory #footer {
 /*│ Popup title bar. │*/
 /*└──────────────────┘*/
 
+.popup {
+    --popup-title-bar-height: 0px;
+}
 .popup.has-title-bar {
+    --popup-title-bar-height: var(--GW-popups-popup-title-bar-height);
+    --popup-title-bar-button-size: calc(var(--popup-title-bar-height) - 1px);
+
     min-width: var(--GW-popups-popup-with-title-bar-min-width);
+}
+.popup.has-title-bar.mini-title-bar {
+    --popup-title-bar-height: var(--GW-popups-popup-mini-title-bar-height);
 }
 
 .popup .popframe-title-bar {
@@ -4100,6 +4110,7 @@ body.index-directory #footer {
     height: var(--popup-title-bar-height);
     border-bottom: 1px solid var(--GW-popups-popup-border-color);
     background-color: var(--GW-popups-popup-title-bar-background-color);
+    background-image: var(--popups-popup-title-bar-background-image);
     display: flex;
     flex-flow: row;
     align-items: center;
@@ -4115,17 +4126,6 @@ body.index-directory #footer {
 .popup.dragging .popframe-title-bar,
 .popup.dragging .popframe-title-bar a {
     cursor: grabbing;
-}
-
-.popup {
-    --popup-title-bar-height: 0px;
-}
-.popup.has-title-bar {
-    --popup-title-bar-height: var(--GW-popups-popup-title-bar-height);
-    --popup-title-bar-button-size: var(--popup-title-bar-height) - 1px;
-}
-.popup.has-title-bar.mini-title-bar {
-    --popup-title-bar-height: var(--GW-popups-popup-mini-title-bar-height);
 }
 
 /*  Popup title.
@@ -4145,6 +4145,10 @@ body.index-directory #footer {
     overflow: hidden;
     text-decoration: none;
     text-align: center;
+    filter: 
+        drop-shadow(0 0 1px var(--GW-popups-popup-title-bar-background-color))
+        drop-shadow(0 0 2px var(--GW-popups-popup-title-bar-background-color)) 
+        drop-shadow(0 0 3px var(--GW-popups-popup-title-bar-background-color));
 }
 .popup.mini-title-bar .popframe-title {
     visibility: hidden;
@@ -4205,6 +4209,10 @@ body.index-directory #footer {
 .popup .popframe-title-bar-button svg {
     max-width: 100%;
     max-height: 100%;
+    filter: 
+        drop-shadow(0 0 1px #fff) 
+        drop-shadow(0 0 2px #fff) 
+        drop-shadow(0 0 3px #fff);
 }
 
 .popup .popframe-title-bar-button:disabled {
@@ -4241,9 +4249,6 @@ body.index-directory #footer {
         visibility 0.1s ease 0.2s,
         opacity 0.1s ease 0.2s;
 }
-.popup .popframe-title-bar .zoom-button + .submenu {
-    left: -1px;
-}
 .popup .popframe-title-bar .submenu:hover,
 .popup .popframe-title-bar .has-submenu:hover + .submenu {
     visibility: visible;
@@ -4253,6 +4258,7 @@ body.index-directory #footer {
     background-color: var(--GW-popups-popup-title-bar-background-color);
     border: none;
     margin: 0;
+    height: var(--popup-title-bar-button-size);
 }
 .popup .popframe-title-bar .submenu button svg {
     height: calc(var(--popup-title-bar-button-size) - 8px);
@@ -4369,7 +4375,6 @@ body.index-directory #footer {
     --GW-popups-popup-border-color: var(--GW-popups-popup-border-focused-color);
     --GW-popups-box-shadow-color: var(--GW-popups-box-shadow-focused-color);
 
-    --GW-popups-popup-title-bar-background-color: var(--GW-popups-popup-title-bar-background-focused-color);
     --GW-popups-popup-title-bar-button-color: var(--GW-popups-popup-title-bar-button-focused-color);
     --GW-popups-popup-title-bar-button-color-hover: var(--GW-popups-popup-title-bar-button-focused-color-hover);
     --GW-popups-popup-title-color: var(--GW-popups-popup-title-focused-color);
@@ -4377,6 +4382,8 @@ body.index-directory #footer {
 
     --GW-popups-popup-scrollbar-thumb-color: var(--GW-popups-popup-scrollbar-thumb-focused-color);
     --GW-popups-popup-scrollbar-thumb-hover-color: var(--GW-popups-popup-scrollbar-thumb-hover-focused-color);
+
+	--popups-popup-title-bar-background-image: url('/static/img/popup-title-bar-pattern-focused.gif');
 }
 
 /*┌──────────────────────────┐*/
