--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -234,12 +234,11 @@
     --GW-popups-popup-border-focused-color: #aaa;
     --GW-popups-box-shadow-focused-color: #aaa;
 
-    --GW-popups-popup-title-bar-background-color: #f6f6f6;
+    --GW-popups-popup-title-bar-background-color: #fff;
     --GW-popups-popup-title-bar-button-color: #bbb;
     --GW-popups-popup-title-bar-button-color-hover: #000;
 	--GW-popups-popup-title-color: #aaa;
     --GW-popups-popup-title-link-hover-color: var(--GW-body-link-hover-color);
-    --GW-popups-popup-title-bar-background-focused-color: #e6e6e6;
     --GW-popups-popup-title-bar-button-focused-color: #777;
     --GW-popups-popup-title-bar-button-focused-color-hover: #000;
     --GW-popups-popup-title-bar-submenu-box-shadow-color: #ddd;
@@ -2030,12 +2029,11 @@ body.special-halloween-dark h6 {
     --GW-popups-popup-border-focused-color: #7c7c7c;
     --GW-popups-box-shadow-focused-color: #7c7c7c;
 
-    --GW-popups-popup-title-bar-background-color: #252525;
+    --GW-popups-popup-title-bar-background-color: #000;
     --GW-popups-popup-title-bar-button-color: #6c6c6c;
     --GW-popups-popup-title-bar-button-color-hover: #fff;
 	--GW-popups-popup-title-color: #7c7c7c;
     --GW-popups-popup-title-link-hover-color: var(--GW-body-link-hover-color);
-    --GW-popups-popup-title-bar-background-focused-color: #3e3e3e;
     --GW-popups-popup-title-bar-button-focused-color: #a6a6a6;
     --GW-popups-popup-title-bar-button-focused-color-hover: #fff;
     --GW-popups-popup-title-bar-submenu-box-shadow-color: #494949;
