--- a/css/include/components/dark-mode-adjustments.css
+++ b/css/include/components/dark-mode-adjustments.css
@@ -42,6 +42,9 @@
 	/*	Similar to the above, but for all SVGs, which don’t get inverted.
 	 */
 	--GW-transparent-svg-background-color: #fff;
+
+    --GW-popups-popup-title-bar-pattern: url('data:image/gif;base64,R0lGODlhCAAIAPAAMRYWFiUlJSwAAAAACAAIAAACDIxhgcma2yKE8kVWAAA7');
+    --GW-popups-popup-title-bar-pattern-focused: url('data:image/gif;base64,R0lGODlhCAAIAPAAMRYWFj4+PiwAAAAACAAIAAACDIxhgcma2yKE8kVWAAA7');
 }
 
 
@@ -232,6 +235,21 @@ img.invert-auto:hover {
     the color is important and shouldn’t be faded out by default.
  */
 #markdownBody img.invert-not { filter: none; }
+
+/*	Dark drop-shadow is more prominent than light one; adjust.
+ */
+.popup .popframe-title-bar .popframe-title-bar-button svg {
+    max-width: 100%;
+    max-height: 100%;
+    filter: 
+        drop-shadow(0 0 1px var(--GW-popups-popup-title-bar-background-color)) 
+        drop-shadow(0 0 2px var(--GW-popups-popup-title-bar-background-color));
+}
+.popup .popframe-title-bar .popframe-title {
+    filter: 
+        drop-shadow(0 0 1px var(--GW-popups-popup-title-bar-background-color))
+        drop-shadow(0 0 2px var(--GW-popups-popup-title-bar-background-color));
+}
 
 /*  The loading spinner for object popups (image, iframe, object) is inverted
     and made more visible in dark mode.
